// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hours integration test mostly real modules should return meta data for time entries 1`] = `
Object {
  "body": Object {
    "serialize() of": Object {
      "meta": Object {
        "description": "All hours for the current month.",
        "invoice": Object {
          "excludingVAT": "2 354,00 kr",
          "includingVAT": "2 942,50 kr",
        },
        "totalBillableHours": 10.7,
        "totalBillableHoursPerWeek": Object {
          "w45": 10.7,
        },
      },
    },
  },
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 200,
}
`;

exports[`hoursPerDay integration test mostly real modules should return relevant time entries per day 1`] = `
Object {
  "body": Object {
    "serialize() of": Object {
      "timeEntriesPerDay": Array [
        Object {
          "billableHours": 8,
          "comment": "None",
          "date": "2020-11-06",
          "name": "Programmering",
        },
        Object {
          "billableHours": 2.7,
          "comment": "None",
          "date": "2020-11-05",
          "name": "Programmering",
        },
      ],
    },
  },
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 200,
}
`;
